--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ Basic HTML Text Tags -->
             <section>
                 <h3>Excerpt from <cite>The Raven</cite>- a Poem by Edgar Allen Poe</h3>
                     <p> Once upon a midnight dreary, while I pondered, weak and weary,<br>
-                        Over many a quaint and curious volume of forgotten lore—&nbsp;&nbsp;&nbsp;&nbsp;
-                        <br>While I nodded, nearly napping, suddenly there came a tapping,<br>
+                        Over many a quaint and curious volume of forgotten lore—&nbsp;&nbsp;&nbsp;&nbsp;<br>
+                        While I nodded, nearly napping, suddenly there came a tapping,<br>
                         As of some one gently rapping, rapping at my chamber door.,<br>
-                        “'Tis some visitor,” I muttered, “tapping at my chamber door—&nbsp;&nbsp;&nbsp;&nbsp;
-                        <br>Only this and nothing more."
+                        “'Tis some visitor,” I muttered, “tapping at my chamber door—&nbsp;&nbsp;&nbsp;&nbsp;<br>
+                        Only this and nothing more."
                     </p>
             </section>
             
